# minimalist-python-cli

./: .gitignore  README.md  pyproject.toml
src/: main.py
